--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "coverage": "vitest --coverage",
     "check": "tsc -b tsconfig.json",
     "check-recursive": "pnpm --recursive exec tsc -b tsconfig.json",
-    "lint": "eslint '**/{src,test,examples,scripts,dtslint}/**/*.{ts,mjs,vue,js}'",
+    "lint": "eslint '**/{src,test}/**/*.{ts,mjs,vue,js}'",
     "lint-fix": "pnpm lint --fix",
     "docgen": "pnpm --recursive --parallel exec docgen && node scripts/docs.mjs",
     "dtslint": "pnpm --recursive --parallel run dtslint",
